# photo-improve1

./: .gitignore  README.bbw.txt  README.md  Restore-Old-Scanned-Photos.md  config.example.yaml  pyproject.toml  requirements.txt  run.ps1
photo_improve/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  pipeline.py  watcher.py
photo_improve/google_photos/: __init__.py  auth.py  download.py  upload.py
photo_improve/steps/: __init__.py  base.py  colorize.py  enhance.py  face_restore.py  gemini_restore.py  levels.py  upscale.py
tests/: test_config.py  test_enhance.py  test_gemini_restore.py  test_levels.py
