[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-improve"
version = "0.1.0"
description = "Local pipeline for restoring old scanned photos with free AI models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bruce Winter", email = "brucewinter@gmail.com" }]
dependencies = [
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
gemini = [
    "google-genai>=0.3",
]
# Filled in as v0.2+ steps land:
# ai = ["realesrgan>=0.3", "gfpgan>=1.3", "torch>=2.2"]
# gphotos = ["google-auth>=2.0", "google-auth-oauthlib>=1.2", "google-api-python-client>=2.0"]
# watch = ["watchdog>=4.0"]

[project.scripts]
photo-improve = "photo_improve.cli:main"

[tool.setuptools.packages.find]
include = ["photo_improve*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
